external-crates/move/crates/move-compiler/tests/move_2024/unit_test/random_test_member_filtering.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03003]: unbound module member
  ┌─ tests/move_2024/unit_test/random_test_member_filtering.move:7:22
  │
7 │     public fun g() { 0x1::f::f(0); }
  │                      ^^^^^^^^^ Invalid module access. Unbound function 'f' in module '0x1::f'
